Fix stretch bug

--- a/style.css
+++ b/style.css
@@ -17,5 +17,5 @@ body {
 }
 
 .main img:hover {
-  width: 45%;
+  height: 45%;
 }
